buildscript {
	repositories {
		mavenLocal()
		jcenter()
		mavenCentral()
	}
	dependencies {
		classpath group: 'org.mini2Dx', name: 'butler', version: '1.1.3'
	}
}

subprojects {

	apply plugin: 'java-library'

	version "1.4.0"

	sourceCompatibility = 15
	targetCompatibility = 15

	tasks.withType(JavaCompile) {
		options.compilerArgs += "--enable-preview"
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}
	tasks.withType(JavaExec) {
		jvmArgs += "--enable-preview"
	}

	java {
		modularity.inferModulePath = true
	}

	afterEvaluate {
		repositories {
			jcenter()
			maven {
				maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
				url "https://maven.pkg.github.com/ealrann/emf-standalone"
				credentials {
					username = "ealrann"
					// Public token with 'read:packages' scope, see https://github.com/jcansdale-test/gradle-java-consume
					password = "\u0061\u0031\u0063\u0037\u0065\u0061\u0034\u0064\u0064\u0061\u0038\u0066\u0039\u0032\u0036\u0064\u0030\u0038\u0034\u0030\u0030\u0032\u0030\u0038\u0062\u0034\u0033\u0037\u0065\u0030\u0066\u0030\u0031\u0065\u0064\u0032\u0033\u0066\u0061\u0034"
				}
			}
		}
	}
}
